--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "devDependencies": {
-    "parcel": "^2.7.0"
-  },
-  "dependencies": {
-    "@vimeo/player": "^2.17.1",
-    "lodash.throttle": "^4.1.1",
-    "simplelightbox": "^2.10.3"
-  }
+    "homepage": "https://olesyay.github.io/goit-js-hw-08/",
+    "scripts": {
+        "build": "parcel build src/*.html --public-url /your_repo_name/"
+    },
+    "devDependencies": {
+        "parcel": "^2.7.0"
+    },
+    "dependencies": {
+        "@vimeo/player": "^2.17.1",
+        "lodash.throttle": "^4.1.1",
+        "simplelightbox": "^2.10.3"
+    }
 }
