--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "homepage": "https://olesyay.github.io/goit-js-hw-08/",
     "scripts": {
-        "build": "parcel build src/*.html --public-url /your_repo_name/"
+        "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
     },
     "devDependencies": {
         "parcel": "^2.7.0"
