--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "devDependencies": {
-    "parcel": "^2.7.0",
+    "@parcel/css": "^1.13.1",
     "@parcel/transformer-sass": "^2.6.0",
+    "parcel": "^2.7.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
   "dependencies": {
     "@vimeo/player": "^2.17.1",
     "lodash.throttle": "^4.1.1",
-    "simplelightbox": "^2.10.3",
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "simplelightbox": "^2.10.3"
   }
 }
